<resources>

    <!-- App & Fragment Titles -->
    <string name="app_name">Bowling Companion</string>
    <string name="title_fragment_league_event">Leagues &amp; Events</string>
    <string name="title_fragment_series">Series</string>
    <string name="title_fragment_game">Game Details</string>
    <string name="title_fragment_match_play">Match Play</string>
    <string name="title_stats_bowler">Bowler Stats</string>
    <string name="title_stats_league">League Stats</string>
    <string name="title_stats_series">Series Stats</string>
    <string name="title_stats_game">Game Stats</string>
    <string name="title_drawer">Navigation</string>

    <!-- Dialog text -->
    <string name="text_undo">Undo</string>
    <string name="dialog_change">Change</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_name_exists">That name has already been used. You must choose another.</string>
    <string name="dialog_name_letters_spaces">You can only use letters and spaces in a name.</string>
    <string name="dialog_score_invalid">A valid score must be between 0 and 450 (inclusive).</string>
    <string name="dialog_name_letters_spaces_numbers">You can only use letters, numbers and spaces in a name.</string>
    <string name="dialog_quick_series_instructions">With this button, you can quickly create a new series with your most recently used bowler/league, or set a specific bowler/league in the settings.</string>
    <string name="dialog_set_score">Setting the score for a game manually will clear any previous data about the game. Are you sure you want to do this?</string>
    <string name="dialog_clear_score">The score manually set for this game will be cleared.</string>
    <string name="dialog_default_name">That name is unavailable. It is a default used by the system. You must choose another.</string>
    <string name="dialog_game_locked">This game is locked. You must unlock the game before attempting to make any changes.</string>
    <string name="dialog_reset_game">You cannot undo this action. Reset this game?</string>
    <string name="dialog_bad_score">Game scores must be between 0 and 450 (inclusive).</string>
    <string name="dialog_edit_date">To change the date of a particular series, click the edit button next to the scores for that series.</string>
    <string name="dialog_match_locked">This game is locked. If you still want to change the match play results, press \'Okay\'. Otherwise, press cancel.</string>

    <!-- Action button text -->
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">Help</string>
    <string name="action_quick_series">Quick series</string>
    <string name="action_stats">Stats</string>
    <string name="action_edit_date">Change series date</string>
    <string name="action_share">Share</string>
    <string name="action_series_stats">Series stats</string>
    <string name="action_event_stats">Event stats</string>
    <string name="action_best_possible">Hi score possible</string>
    <string name="action_reset_game">Reset game</string>
    <string name="action_set_score">Set manual score</string>
    <string name="action_clear_score">Clear manual score</string>
    <string name="action_combine_series">Combine series</string>

    <!-- TextView text -->
    <string name="text_next_ball">Next Ball</string>
    <string name="text_prev_ball">Prev Ball</string>
    <string name="text_open_drawer">Open Navigation Drawer</string>
    <string name="text_close_drawer">Close Navigation Drawer</string>
    <string name="text_rate_prompt">If you like this app, please consider rating it.</string>
    <string name="text_rate_app">Rate</string>
    <string name="text_rate_remind_me">Remind me</string>
    <string name="text_rate_no">No, thanks</string>
    <string name="text_combine_series">It appears you have some series created on the same date. Would you like to combine these series into one? This cannot be undone.</string>
    <string name="text_combine">Combine</string>
    <string name="text_do_not_combine">Do not combine</string>
    <string name="text_do_not_ask_again">No, don\'t ask again</string>
    <string name="text_skip">Next</string>
    <string name="text_back">Back</string>
    <string name="text_continue">Continue</string>
    <string name="text_stats_accumulate">Stat values accumulate over time</string>
    <string name="text_stats_by_week">Stat values are week by week</string>
    <string name="text_opening_graph">Opening graph for stats</string>
    <string name="text_opening_graph_click">Remember that you can tap on any stat to more easily view a graph of that stat over time.</string>
    <string name="text_next_stat">Next stat</string>
    <string name="text_prev_stat">Previous stat</string>
    <string name="text_like_on_fb">Be sure to like us on Facebook for news and updates!</string>

    <!-- Tutorial -->
    <string name="text_tutorial_welcome">Welcome to your 5 Pin Bowling Companion!</string>
    <string name="text_tutorial_add_bowler_league_series">Begin by creating a new bowler and leagues. Use the \'+\' button to create a new item, or press and hold on an item to delete or change its name.</string>
    <string name="text_tutorial_leagues_events">You can create leagues or events. Leagues are a weekly event of 1–5 games. Events are one time only, but can be up to 20 games.</string>
    <string name="text_tutorial_pin_game">Record a game by tapping or swiping to knock over the pins you hit each ball. You can also add fouls, lock games and set match play results.</string>
    <string name="text_tutorial_manual_game">If you need to add a game after you\'ve bowled it, you can using the menu button while editing a game to set a score manually.</string>
    <string name="text_tutorial_statistics">You can view statistics by tapping the "Statistics" button anywhere you see it. You can also tap a statistic to see a graph of it over time.</string>
    <string name="text_tutorial_settings">Finally, the settings menu is available throughout the app and allows you to personalize it to fit your needs.</string>
    <string name="text_league_example">This is a league</string>
    <string name="text_event_example">This is an event</string>
    <string name="text_average_example">Average</string>
    <string name="text_stat_name_example">Example stat</string>
    <string name="text_stat_value_example">100% [10/10]</string>
    <string name="text_example_bowler">Your name here</string>
    <string name="text_example_league">Bowling Club</string>

    <!-- Match play -->
    <string name="text_bowler_name">Bowler:</string>
    <string name="text_league_name">League/Event:</string>
    <string name="text_series_name">Date:</string>
    <string name="text_game_number">Game #:</string>
    <string name="text_score">Score:</string>
    <string name="text_opponent_name">Opponent\'s name</string>
    <string name="text_opponent_score">Opponent\'s score</string>
    <string name="text_none">None</string>
    <string name="text_won">Won</string>
    <string name="text_lost">Lost</string>
    <string name="text_tied">Tied</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_save">Save</string>
    <string name="text_results_saved">Results saved!</string>
    <string name="text_save_failure">Failed to save results</string>
    <string name="text_not_loaded">Not finished loading</string>
    <string name="text_match_play">Match play:</string>

    <!-- Permissions -->
    <string name="permission_request_storage">5 Pin Bowling Companion requires the external storage to save an image of your game to the device.</string>

    <!-- Content Descriptions -->
    <string name="description_lock_unlock">Lock or unlock game</string>
    <string name="description_clear_pins">Clear pins</string>
    <string name="description_close">Close</string>
    <string name="description_foul">Add or remove foul</string>
    <string name="description_reset_frame">Reset the frame</string>
    <string name="description_edit_date">Click to edit date</string>
    <string name="description_match">Set match play results</string>
    <string name="description_fb">Facebook</string>

</resources>
