<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_poll_black_24dp"
        android:orderInCategory="10"
        android:title="@string/action_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="15"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_series_stats"
        android:orderInCategory="20"
        android:title="@string/action_series_stats"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_what_if"
        android:orderInCategory="30"
        android:title="@string/action_what_if"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset_game"
        android:orderInCategory="40"
        android:title="@string/action_reset_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_score"
        android:orderInCategory="50"
        android:title="@string/action_set_score"
        app:showAsAction="never" />

</menu>
