<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_poll_black_24dp"
        android:orderInCategory="10"
        android:title="@string/action_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_combine_series"
        android:orderInCategory="15"
        android:title="@string/action_combine_series"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_duplicate_series"
        android:orderInCategory="17"
        android:title="@string/action_duplicate_series"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_date"
        android:orderInCategory="20"
        android:title="@string/action_edit_date"
        app:showAsAction="never" />

</menu>
