<LinearLayout
    android:id="@+id/tutorial_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        tools:ignore="RelativeOverlap,RtlHardcoded,RtlSymmetry">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:alpha="0.54"
            android:paddingLeft="@dimen/list_keyline"
            android:src="@drawable/ic_l_black_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.87"
            android:gravity="center"
            android:paddingLeft="@dimen/list_text_keyline"
            android:text="@string/text_league_example"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:alpha="0.54"
            android:gravity="center"
            android:paddingRight="@dimen/list_keyline"
            android:text="@string/text_average_example"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        tools:ignore="RelativeOverlap,RtlHardcoded,RtlSymmetry">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:alpha="0.54"
            android:paddingLeft="@dimen/list_keyline"
            android:src="@drawable/ic_e_black_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.87"
            android:gravity="center"
            android:paddingLeft="@dimen/list_text_keyline"
            android:text="@string/text_event_example"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:alpha="0.54"
            android:gravity="center"
            android:paddingRight="@dimen/list_keyline"
            android:text="@string/text_average_example"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

</LinearLayout>
